src/test/resources/org/xmlcml/www/convention/dictionary/invalid/no-entry-in-dictionary.cml
<?xml version="1.0" encoding="utf-8" ?>
<cml xmlns="http://www.xml-cml.org/schema"
     xmlns:html="http://www.w3.org/1999/xhtml"
     xmlns:dc="http://purl.org/dc/elements/1.1/"
     xmlns:conventions="http://www.xml-cml.org/convention/"
        convention="conventions:dictionary">
    <dc:title>test file for http://www.xml-cml.org/convention/dictionary convention</dc:title>
    <dc:description>dictionary must contain at least one element</dc:description>
    <dc:author>J A Townsend</dc:author>
    <dc:rights>Copyright J A Townsend jat45@cantab.net 2009.</dc:rights>
    <dc:date>2010-12-23</dc:date>
    <dictionary title="fundamental chemistry concepts" namespace="http://www.xml-cml.org/dictionary/cml"/>
</cml>